--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <p>If you’d like to connect with me, feel free to reach out:</p>
         <ul>
             <li>Email: <a href="whitedevilloke@gmail.com</a></li>
-            <li>GitHub: <a href="github.com" target="_blank">whitedevilloke@gmail.com</a></li>
+            <li>GitHub: <a href="whitedevilloke@gmail.com" target="_blank">whitedevilloke@gmail.com</a></li>
         </ul>
     </div>
 </section>
