--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
         <h2>Contact Me</h2>
         <p>If you’d like to connect with me, feel free to reach out:</p>
         <ul>
-            <li>Email: <a href="mailto:whitedevilloke@gmail.com">whitedevilloke@gmail.com</a></li>
+             <li>Email: <a href="mailto:whitedevilloke@gmail.com" >whitedevilloke@gmail.com</a></li>
         </ul>
     </div>
 </section>
     <footer>
-        <p>&copy; 2025 Gokul Raj</p>
+        <p>&copy; 2025 Lokesh A</p>
     </footer>
 
     <script>
